load("@AvrToolchain//:helpers.bzl", "default_embedded_binary", "default_embedded_binaries")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")


default_embedded_binary(
    name = "main_dynamicMM",
    srcs = ["main_dynamicMM.c"],
    copts = cpu_frequency_flag(),
    uploader = "Avr_dude_upload_script",
    deps = ["//app/setup:Setup",
            "//lib/DynamicMemoryManagement:TaskGraphConfigLibHdr",
            "//lib/DynamicMemoryManagement:Malloc_mwLib",
            "//lib/DynamicMemoryManagement:HeapsLib",
            "//lib/DynamicMemoryManagement:Stack_depthLib",
            "//:UartLib",
            "//:XMemLib",
            "//lib/DynamicMemoryManagement:InputManagementLib",
            "//lib/DynamicMemoryManagement:TaskLib",
            "//lib/DynamicMemoryManagement:MemoryManagementLib"
            ]
)

genrule(
    name = "Avr_dude_upload_script",
    outs = ["upload.sh"],
    cmd = """echo "avrdude -c stk500 -p \$$1 -P /dev/ttyACM0 -D -V -U flash:w:\$$2:i -e" > $@""",
)