load("@EmbeddedSystemsBuildScripts//Unity:unity.bzl", "generate_a_unity_test_for_every_file", "mock", "unity_test")

# terminal: bazelisk test //test/dynamicMM:all

unity_test(
    cexception = False,
    copts = ["-DTEST"],
    file_name = "test_InputManagement.c",
    deps = [
        "//lib/DynamicMemoryManagement:InputManagementLibTest",
    ],
)

#unity_test(
#    cexception = False,
#    copts = ["-DTEST"],
#    file_name = "test_MemoryManagement.c",
#    deps = [
#        "//lib/DynamicMemoryManagement:MemoryManagementLibTest",
#    ]
#)

unity_test(
    cexception = False,
    copts = ["-DTEST"],
    file_name = "test_Task.c",
    deps = [
        "//lib/DynamicMemoryManagement:TaskLibTest",
        "//lib/DynamicMemoryManagement:InputManagementLibTest",
        "//lib/DynamicMemoryManagement:MemoryManagementLibTest",
        "//lib/DynamicMemoryManagement:TaskDefinitionsLibTest",
        "//lib/DynamicMemoryManagement:Task_FreedLibTest"
    ],
)

unity_test(
    cexception = False,
    copts = ["-DTEST"],
    file_name = "test_Integration.c",
    deps = [
        "//lib/DynamicMemoryManagement:InputManagementLibTest",
        "//lib/DynamicMemoryManagement:MemoryManagementLibTest",
        "//lib/DynamicMemoryManagement:TaskLibTest",
        "//lib/DynamicMemoryManagement:MemoryManagementDefinitionsLibTest",
        "//lib/DynamicMemoryManagement:TaskDefinitionsLibTest",
        "//lib/DynamicMemoryManagement:Task_FreedLibTest"
    ],
)

#unity_test(
#    cexception = False,
#    copts = ["-DTEST"],
#    file_name = "test_lazy.c",
#    deps = [ "//lib/DynamicMemoryManagement:TaskLibTest",
#             "//lib/DynamicMemoryManagement:InputManagementLibTest",
#             "//lib/DynamicMemoryManagement:MemoryManagementLibTest",
#             "//lib/DynamicMemoryManagement:TaskGraphConfigLibHdr"
#             ]
#)

unity_test(
    cexception = False,
    copts = ["-DTEST"],
    file_name = "test_MatrixMultiplication.c",
    deps = [
        "//lib/DynamicMemoryManagement:InputManagementLibTest",
        "//lib/DynamicMemoryManagement:MemoryManagementLibTest",
        "//lib/DynamicMemoryManagement:TaskLibTest",
        "//lib/DynamicMemoryManagement:TaskDefinitionsLibTest",
        "//lib/DynamicMemoryManagement:Task_FreedLibTest"
    ],
)